# rivet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  SAFETY.md  deny.toml  rivet.yaml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  compliance.yml  fuzz.yml  release-npm.yml  release.yml  rivet-delta.yml
.rivet/: agent-context.md
arch/: rivet_adapters.aadl  rivet_dashboard.aadl  rivet_system.aadl
artifacts/: architecture.yaml  bindings.yaml  decisions.yaml  eu-ai-act.yaml  feature-model.yaml  features.yaml  requirements.yaml  v031-decisions.yaml  v031-features.yaml  v031-phase2-features.yaml  v040-decisions.yaml  v040-features.yaml  v040-verification.yaml  v042-artifacts.yaml  v043-artifacts.yaml  verification.yaml
artifacts/variants/: dashboard-only.yaml  full-desktop.yaml  minimal-ci.yaml
dev/bench/: data.js
docs/: architecture.md  audit-report.md  context-example-review-roles.yaml  feature-model-bindings.md  feature-model-schema.md  getting-started.md  intro-talk-onepager.md  intro-talk-template.md  mutation-testing.md  oracles.md  pre-commit.md  pure-variants-comparison.md  roadmap.md  schemas.md  srs.md  stpa-sec.md  verification.md  what-is-rivet.md
docs/design/: ai-evidence-trend-research.md  ai-safety-cyber-hitl.md  comparison-useblocks.md  doc-reality-audit.md  embed-discoverability.md  iso26262-artifact-mapping.md  polarion-reqif-fidelity.md  rivet-cli-gaps-2026-04.md  sexpr-artifact-format.md
docs/plans/: 2026-03-09-spar-wasm-browser-rendering.md  2026-03-10-commit-traceability-design.md  2026-03-10-commit-traceability-plan.md  2026-03-10-cross-repo-linking-design.md  2026-03-10-cross-repo-linking-plan.md  2026-03-10-unidirectional-externals-design.md  2026-03-10-unidirectional-externals-plan.md  2026-03-14-phase3-parallel-workstreams-design.md  2026-03-15-release-v0.1.0-plan.md  2026-03-16-coverage-gap-analysis.md  2026-03-16-oslc-analysis.md  (+8 more)
etch/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/examples/: oracle_smoke.rs
fuzz/fuzz_targets/: artifact_ids.rs  cli_argv.rs  fuzz_document_parse.rs  fuzz_needs_json_import.rs  fuzz_reqif_import.rs  fuzz_schema_merge.rs  fuzz_yaml_artifact.rs  yaml_footguns.rs
npm/: .npmignore  README.md  index.js  install.js  package.json  run.js  uninstall.js
proofs/rocq/: BUILD.bazel  MODULE.bazel  Schema.v  Validation.v
results/: run-001.yaml
rivet-cli/: Cargo.toml  build.rs
rivet-cli/assets/: fonts.css
rivet-cli/assets/wasm/: README.md
rivet-cli/src/: close_gaps.rs  docs.rs  lsp.rs  main.rs  mcp.rs  migrate_cmd.rs  pipelines_cmd.rs  quickstart.md  runs_cmd.rs  schema_cmd.rs  serve.rs  templates_cmd.rs
rivet-cli/src/check/: bidirectional.rs  gaps_json.rs  mod.rs  review_signoff.rs  sources.rs
rivet-cli/src/render/: artifacts.rs  components.rs  coverage.rs  diff.rs  doc_linkage.rs  documents.rs  eu_ai_act.rs  externals.rs  graph.rs  help.rs  helpers.rs  matrix.rs  mod.rs  results.rs  search.rs  source.rs  stats.rs  stpa.rs  traceability.rs  validate.rs
rivet-cli/src/serve/: api.rs  components.rs  js.rs  layout.rs  mod.rs  styles.rs  variant.rs  views.rs
rivet-cli/tests/: check_oracles.rs  cited_source_integration.rs  cli_commands.rs  close_gaps_template_wiring.rs  docs_coverage.rs  docs_scanner_warnings.rs  embeds_help.rs  hooks_install.rs  init_bootstrap.rs  init_integration.rs  lsp_integration.rs  mcp_integration.rs  mcp_tools.rs  migrate_integration.rs  serve_integration.rs  serve_lint.rs  sexpr_filter_integration.rs  templates_cmd.rs  variant_emit.rs  variant_init.rs  variant_manifest.rs  variant_scoped_api.rs  variant_solve_origins.rs
rivet-core/: Cargo.toml
rivet-core/benches/: core_benchmarks.rs
rivet-core/src/: BUILD.bazel  adapter.rs  agent_pipelines.rs  bazel.rs  cited_source.rs  commits.rs  compliance.rs  convergence.rs  coverage.rs  coverage_evidence.rs  db.rs  diff.rs  doc_check.rs  document.rs  embed.rs  embedded.rs  error.rs  export.rs  externals.rs  feature_model.rs  impact.rs  junit.rs  lib.rs  lifecycle.rs  links.rs  managed_section.rs  markdown.rs  matrix.rs  migrate.rs  model.rs  mutate.rs  oslc.rs  ownership.rs  proofs.rs  provenance_track.rs  providers.rs  query.rs  reqif.rs  results.rs  rivet_version.rs  (+16 more)
rivet-core/src/formats/: aadl.rs  generic.rs  mod.rs  needs_json.rs  stpa.rs
rivet-core/src/templates/discovery/: discover.md  emit.md  rank.md  validate.md
rivet-core/src/templates/structural/: discover.md  emit.md  validate.md
rivet-core/tests/: binding_when.rs  commits_config.rs  commits_integration.rs  differential_yaml.rs  docs_schema.rs  externals_config.rs  externals_sync.rs  integration.rs  mutate_integration.rs  oslc_integration.rs  proptest_core.rs  proptest_feature_model.rs  proptest_operations.rs  proptest_sexpr.rs  proptest_yaml.rs  schema_agent_pipelines.rs  sexpr_doc_examples.rs  sexpr_fuzz.rs  sexpr_predicate_matrix.rs  stpa_roundtrip.rs  stpa_sec_verification.rs  supply_chain_schema.rs  variant_gap_check.rs  vv_coverage_schema.rs  yaml_edge_cases.rs  yaml_roundtrip.rs  yaml_test_suite.rs
rivet-core/tests/fixtures/: sample_needs.json
schemas/: aadl.yaml  aspice.yaml  common.yaml  cybersecurity.yaml  dev.yaml  do-178c.yaml  en-50128.yaml  eu-ai-act-aspice.bridge.yaml  eu-ai-act-stpa.bridge.yaml  eu-ai-act.yaml  iec-61508.yaml  iec-62304.yaml  iso-26262.yaml  iso-8800-stpa.bridge.yaml  iso-pas-8800.yaml  research.yaml  safety-case-eu-ai-act.bridge.yaml  safety-case-stpa.bridge.yaml  safety-case.yaml  score.yaml  sotif-stpa.bridge.yaml  sotif.yaml  stpa-ai.yaml  stpa-dev.bridge.yaml  stpa-sec.yaml  stpa.yaml  supply-chain-dev.bridge.yaml  supply-chain.yaml  vv-coverage.yaml
scripts/: build-wasm.sh  diff-to-markdown.mjs  fetch-wasm.sh  install-hooks.sh  pre-commit
tests/: playwright-export.sh
verus/: BUILD.bazel  MODULE.bazel
vscode-rivet/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
wit/: adapter.wit
(+119 files in other folders)
