[workspace]
resolver = "2"
members = [
    "rivet-core",
    "rivet-cli",
    "etch",
]

[workspace.package]
version = "0.1.0"
authors = ["PulseEngine <https://github.com/pulseengine>"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(verus)'] }

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex
regex = "1"

# Graph
petgraph = "0.6"

# Incremental computation
salsa = "0.26"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP / serve
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
urlencoding = "2"

# XML (ReqIF)
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }

# WASM component model
wasmtime = { version = "42", features = ["component-model"] }
wasmtime-wasi = "42"

# Lossless syntax trees
rowan = "0.16"

# Markdown rendering
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# AADL (spar) — parser, HIR, analysis
spar-hir = { git = "https://github.com/pulseengine/spar.git", rev = "84a7363" }
spar-analysis = { git = "https://github.com/pulseengine/spar.git", rev = "84a7363" }
