[workspace]
resolver = "2"
members = [
    "rivet-core",
    "rivet-cli",
    "etch",
]

[workspace.package]
version = "0.6.0"
authors = ["PulseEngine <https://github.com/pulseengine>"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(verus)'] }

# SCRC clippy restriction lints.
# Phase 1 (DD-058, DD-059): base restriction family at warn with
# file-scope blanket allow blocks where call-site migration is deferred.
# Phase 2 opening (DD-063): second tier of defensive lints covering
# unsafe-block hygiene, memory-safety adjacency, and UB traps. Zero
# current violations across the workspace for every Phase 2 lint except
# `exit`, which we grandfather at three CLI exit-code sites.
# priority = -1 so individual #[allow(clippy::xxx)] / #[warn(clippy::xxx)]
# at call sites take precedence over the workspace default.
[workspace.lints.clippy]
# ── Phase 1 ──
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
indexing_slicing = { level = "warn", priority = -1 }
arithmetic_side_effects = { level = "warn", priority = -1 }
as_conversions = { level = "warn", priority = -1 }
cast_possible_truncation = { level = "warn", priority = -1 }
cast_sign_loss = { level = "warn", priority = -1 }
wildcard_enum_match_arm = { level = "warn", priority = -1 }
match_wildcard_for_single_variants = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
unimplemented = { level = "warn", priority = -1 }
dbg_macro = { level = "warn", priority = -1 }
print_stdout = { level = "warn", priority = -1 }
print_stderr = { level = "warn", priority = -1 }
# ── Phase 2 opening (DD-063) — unsafe-block hygiene & memory-safety ──
undocumented_unsafe_blocks = { level = "warn", priority = -1 }
multiple_unsafe_ops_per_block = { level = "warn", priority = -1 }
mem_forget = { level = "warn", priority = -1 }
mem_replace_with_uninit = { level = "warn", priority = -1 }
transmute_undefined_repr = { level = "warn", priority = -1 }
uninit_assumed_init = { level = "warn", priority = -1 }
rc_mutex = { level = "warn", priority = -1 }
mutex_atomic = { level = "warn", priority = -1 }
same_name_method = { level = "warn", priority = -1 }
lossy_float_literal = { level = "warn", priority = -1 }
empty_drop = { level = "warn", priority = -1 }
exit = { level = "warn", priority = -1 }

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing (agent-pipelines scaffold fingerprints)
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex
regex = "1"

# Graph
petgraph = "0.7"

# Incremental computation
salsa = "0.26"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP / serve
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
urlencoding = "2"

# XML (ReqIF)
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }

# WASM component model
wasmtime = { version = "42", features = ["component-model"] }
wasmtime-wasi = "42"

# Lossless syntax trees — using fork with Miri UB fixes until upstream merges.
# Upstream issues: rust-analyzer/rowan#192, #163, #108
# Our PR: rust-analyzer/rowan#210
rowan = { git = "https://github.com/pulseengine/rowan.git", branch = "fix/miri-soundness-v2" }

# Markdown rendering
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# AADL (spar) — parser, HIR, analysis
spar-hir = { git = "https://github.com/pulseengine/spar.git", rev = "84a7363" }
spar-analysis = { git = "https://github.com/pulseengine/spar.git", rev = "84a7363" }
