# Rivet — root Bazel module (bzlmod).
#
# This file defines the repo as a single Bazel workspace so that
# Verus SMT verification and Rocq metamodel proofs can reference
# Rust source files that live outside their own subdirectories
# (e.g. //rivet-core/src:verus_specs.rs).
#
# Prior to consolidation each subproject (verus/, proofs/rocq/) had
# its own MODULE.bazel, which made every Bazel label relative to that
# subdirectory and broke cross-package references. Unifying the
# workspace at the repo root lets //verus:rivet_specs_verify depend
# on //rivet-core/src:verus_specs.rs directly.
#
# The Rust crates themselves are still built via cargo. Bazel is only
# used for the formal-verification targets under verus/ and
# proofs/rocq/.
#
# Usage:
#   bazel test //verus:rivet_specs_verify         # Verus SMT verification
#   bazel test //proofs/rocq:rivet_metamodel_test # Rocq proof checking

module(
    name = "rivet",
    version = "0.4.0",
)

# ── rules_verus (Verus SMT verification) ────────────────────────────────

bazel_dep(name = "rules_verus", version = "0.1.0")

git_override(
    module_name = "rules_verus",
    remote = "https://github.com/pulseengine/rules_verus.git",
    # fc7b636: rules_rust minimum bumped to 0.58.0 — earlier minimum
    # depended on the removed Bazel built-in `CcInfo` and broke load.
    # 5e2b7c6: three correctness fixes in verus-strip (backtick-in-doc,
    # `pub exec const` qualifier, content-after-`verus!{}` truncation).
    commit = "fc7b63692b1d2d91511f04507b814187932cd733",
)

verus = use_extension("@rules_verus//verus:extensions.bzl", "verus")
verus.toolchain(version = "0.2026.02.15")
use_repo(verus, "verus_toolchains")

register_toolchains("@verus_toolchains//:all")

# ── rules_rocq_rust (Rocq metamodel proofs) ────────────────────────────

bazel_dep(name = "rules_rocq_rust", version = "0.1.0")

git_override(
    module_name = "rules_rocq_rust",
    remote = "https://github.com/pulseengine/rules_rocq_rust.git",
    commit = "6a8da0bd30b5f80f811acefbf6ac5740a08d4a8c",
)

# rules_rocq_rust needs a Nix toolchain for hermetic Rocq binaries.
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

nix_repo = use_extension(
    "@rules_nixpkgs_core//extensions:repository.bzl",
    "nix_repo",
)
nix_repo.github(
    name = "nixpkgs",
    org = "NixOS",
    repo = "nixpkgs",
    # nixos-unstable with Rocq 9.0.1 (pinned 2026-03-06)
    commit = "aca4d95fce4914b3892661bcb80b8087293536c6",
    sha256 = "",
)
use_repo(nix_repo, "nixpkgs")

rocq = use_extension("@rules_rocq_rust//rocq:extensions.bzl", "rocq")
rocq.toolchain(
    version = "9.0",
    strategy = "nix",
)
use_repo(rocq, "rocq_toolchains", "rocq_stdlib")
register_toolchains("@rocq_toolchains//:all")
