[package]
name = "rivet-cli"
description = "CLI for SDLC artifact traceability, validation, and serving"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rivet"
path = "src/main.rs"

[features]
default = []
wasm = ["rivet-core/wasm"]

[dependencies]
rivet-core = { path = "../rivet-core" }
clap = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
etch = { path = "../etch" }
petgraph = { workspace = true }
urlencoding = { workspace = true }
lsp-server = "0.7"
lsp-types = "0.97"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
