[package]
name = "rivet-core"
description = "Core library for SDLC artifact traceability — model, links, validation, schemas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["aadl"]
oslc = ["dep:reqwest", "dep:urlencoding"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
aadl = ["dep:spar-hir", "dep:spar-analysis"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
salsa = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
quick-xml = { workspace = true }
rowan = { workspace = true }

# OSLC client (optional, behind "oslc" feature)
reqwest = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

# WASM runtime (optional, behind "wasm" feature)
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# AADL / spar (optional, behind "aadl" feature — default on)
spar-hir = { workspace = true, optional = true }
spar-analysis = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { workspace = true }
wiremock = "0.6"
tokio = { workspace = true }
tempfile = "3"
serial_test = "3"

[lints]
workspace = true

[[bench]]
name = "core_benchmarks"
harness = false
