# Verus formal verification integration for Rivet.
#
# This file shows the MODULE.bazel fragment needed to enable Verus
# verification.  Merge these declarations into the project root
# MODULE.bazel when Bazel is adopted as a build system.
#
# The rules_verus module downloads pre-built Verus binaries (rust_verify
# + Z3) from GitHub releases and provides hermetic toolchain support.

module(
    name = "rivet",
    version = "0.1.0",
)

# ── rules_verus dependency ──────────────────────────────────────────────

bazel_dep(name = "rules_verus", version = "0.1.0")

git_override(
    module_name = "rules_verus",
    remote = "https://github.com/pulseengine/rules_verus.git",
    commit = "e2c1600a8cca4c0deb78c5fcb4a33f1da2273d29",
)

# ── Verus toolchain registration ───────────────────────────────────────

verus = use_extension("@rules_verus//verus:extensions.bzl", "verus")
verus.toolchain(version = "0.2026.02.15")
use_repo(verus, "verus_toolchains")

register_toolchains("@verus_toolchains//:all")
